# zeverything

./: README.md  zeverything.cabal
src/: Forum.hs  ValidationTest.hs
src/Data/Generics/: Validation.hs
src/Data/Generics/Validation/: Test.hs
